--- a/src/Components/Tooltip.css
+++ b/src/Components/Tooltip.css
@@ -7,12 +7,16 @@
 
 /* Tooltip box styling */
 .tooltip-box {
-  position: absolute;
+  position: fixed;
+  top: 20vh;
+  left: 50%;
+  transform: translateX(-50%);
   padding: 8px 12px;
-  background-color: #333;
+  background-color: #000;
   color: #fff;
   border-radius: 4px;
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: normal;
   white-space: normal; /* Allow text to wrap */
   word-wrap: break-word; /* Break words that are too long */
   width: max-content;
@@ -20,78 +24,15 @@
   z-index: 1000;
   opacity: 0;
   transition: opacity 0.1s;
+  pointer-events: none;
+}
+
+.tooltip-trigger {
+  text-decoration: underline dotted;
+  color: white;
 }
 
 /* Show the tooltip */
-.tooltip-wrapper:hover .tooltip-box {
+.tooltip-trigger:hover + .tooltip-box {
   opacity: 1;
-}
-
-/* Tooltip arrow styling */
-.tooltip-arrow {
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-style: solid;
-}
-
-/* Tooltip positioning */
-.tooltip-top {
-  bottom: 100%;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-bottom: 8px;
-}
-
-.tooltip-arrow-top {
-  top: 100%;
-  left: 50%;
-  border-width: 5px 5px 0 5px;
-  border-color: #333 transparent transparent transparent;
-  transform: translateX(-50%);
-}
-
-.tooltip-bottom {
-  top: 100%;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-top: 8px;
-}
-
-.tooltip-arrow-bottom {
-  bottom: 100%;
-  left: 50%;
-  border-width: 0 5px 5px 5px;
-  border-color: transparent transparent #333 transparent;
-  transform: translateX(-50%);
-}
-
-.tooltip-left {
-  top: 50%;
-  right: 100%;
-  transform: translateY(-50%);
-  margin-right: 8px;
-}
-
-.tooltip-arrow-left {
-  top: 50%;
-  right: -5px;
-  border-width: 5px 0 5px 5px;
-  border-color: transparent transparent transparent #333;
-  transform: translateY(-50%);
-}
-
-.tooltip-right {
-  top: 50%;
-  left: 100%;
-  transform: translateY(-50%);
-  margin-left: 8px;
-}
-
-.tooltip-arrow-right {
-  top: 50%;
-  left: -5px;
-  border-width: 5px 5px 5px 0;
-  border-color: transparent #333 transparent transparent;
-  transform: translateY(-50%);
 }
