refactor: move problems from Problems.ts into files separated by verb
feat: thousands of new problem sentences
feat: hundreds of new definitions
feat: new settings to show only some verbs
test: new tests to cover issues that come up when generating new problems
fix: show settings menu over problem sentence
fix: fix display of settings icon on iOS Safari

--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,26 @@
   background-color: #223;
   text-align: center;
   font-size: 1rem;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .App-header {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  flex: 1;
+}
+
+.App-footer {
+  color: #fff7;
+  padding: 1rem;
+  flex-shrink: 0;
 }
 
 .button-container {
@@ -49,15 +59,6 @@
   background-color: #19561b;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .settings-container {
   position: absolute;
   top: 1rem;
@@ -65,10 +66,10 @@
 }
 
 .settings-button {
-  background-color: #0000;
+  background-color: transparent;
   color: white;
+  border-radius: 10px;
   border: none;
-  font-size: 1.5rem;
   width: 44px;
   height: 44px;
   cursor: pointer;
@@ -77,10 +78,16 @@
   justify-content: center;
 }
 
+.settings-icon {
+  width: 44px; /* Adjust as needed */
+  height: 44px; /* Ensure the image scales correctly */
+  object-fit: contain; /* Ensures the image maintains aspect ratio */
+}
+
 .settings-button:hover {
   background-color: #0000;
 }
 
 .settings-button:active {
-  background-color: #0000;
+  background-color: #fff5;
 }
