--- a/src/Components/SettingsMenu.css
+++ b/src/Components/SettingsMenu.css
@@ -8,14 +8,24 @@
   color: #fff;
   border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  max-height: 80vh;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.settings-content {
+  overflow-y: auto;
 }
 
 .toggle-container {
-  width: fit-content;
-  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .toggle {
-  padding: 0.5rem 0;
-  text-align: left;
+  flex: 1 1 8rem;
+  padding: 0.15rem;
 }
