--- a/src/Components/SettingsMenu.css
+++ b/src/Components/SettingsMenu.css
@@ -2,8 +2,8 @@
   position: absolute;
   top: 60px;
   right: 0;
-  width: calc(100vw - 4rem);
-  padding: 1rem;
+  width: calc(100vw - 3rem);
+  padding: 0.5rem;
   background-color: #445;
   color: #fff;
   border-radius: 5px;
@@ -22,10 +22,19 @@
 .toggle-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 0.2rem;
 }
 
 .toggle {
-  flex: 1 1 8rem;
+  flex: 1 0 auto;
   padding: 0.15rem;
+  align-items: center;
+}
+
+.toggle input[type='checkbox'] {
+  cursor: pointer;
+}
+
+.toggle label {
+  cursor: pointer;
 }
